Supporting 16:9 slide ratio

--- a/uoc-beamer-template-1.tex
+++ b/uoc-beamer-template-1.tex
@@ -11,6 +11,7 @@
 
 
 \documentclass{beamer}
+%\documentclass[aspectratio=169]{beamer}
 
 %
 % DO NOT USE THIS FILE AS A TEMPLATE FOR YOUR OWN TALKS¡!!
