Attempt to change alert color stype

--- a/beamercolorthemecambridge.sty
+++ b/beamercolorthemecambridge.sty
@@ -57,5 +57,6 @@
 \setbeamercolor*{block title}{bg=CambridgeDark,fg=white}
 
 \setbeamercolor*{alerted text}{fg=CambridgeCore}
+%\setbeamercolor*{alerted text}{fg=red}
 
 \mode<all>
