--- a/uoc-beamer-template-1.tex
+++ b/uoc-beamer-template-1.tex
@@ -1,25 +1,14 @@
 % Copyright 2007 by Till Tantau
-% Copyright 2014 by Rich Wareham
+% Copyright 2014 by Rich Wareham, Filippo Spiga
 %
-% This file may be distributed and/or modified
-%
+% This file may be distributed and/or modified:
 % 1. under the LaTeX Project Public License and/or
 % 2. under the GNU Public License.
 %
-% See the file doc/licenses/LICENSE for more details.
-
-
+% See the file LICENSE for more details.
 
 \documentclass{beamer}
 %\documentclass[aspectratio=169]{beamer}
-
-%
-% DO NOT USE THIS FILE AS A TEMPLATE FOR YOUR OWN TALKS¡!!
-%
-% Use a file in the directory solutions instead.
-% They are much better suited.
-%
-
 
 % Setup appearance:
 
@@ -27,9 +16,9 @@
 
 %\usefonttheme[onlylarge]{structurebold}
 %\setbeamerfont*{frametitle}{size=\normalsize,series=\bfseries}
-\setbeamertemplate{navigation symbols}{}
+\setbeamertemplate{navigation symbols}{}  % suppress navigation symbols
 
-\usetheme{cambridge}
+\usetheme{cambridge} 
 
 % Standard packages
 
@@ -47,8 +36,7 @@
     breaklines=true',
     captionpos=b  
 }
- 
- 
+
 %\usepackage{times}
 %\usepackage[T1]{fontenc}
 
