Additional (required) packages

--- a/hpcs-uoc-beamer-template-1.tex
+++ b/hpcs-uoc-beamer-template-1.tex
@@ -24,8 +24,12 @@
 
 \usepackage[english]{babel}
 \usepackage[latin1]{inputenc}
-
+\usepackage{multicol}
 \usepackage{listings}
+\usepackage{subfigure}
+
+%%% Customization:
+\setbeamerfont{caption}{size=\tiny}
 \definecolor{darkgreen}{rgb}{0,.5,0}
 
 \lstdefinestyle{CUDA}{
