--- a/cambridgecolours.sty
+++ b/cambridgecolours.sty
@@ -20,4 +20,9 @@
 \definecolor{CambridgeDarkPurple}{RGB}{65,45,93}
 \definecolor{CambridgeDarkTeal}{RGB}{21,101,112}
 
+\definecolor{CambridgeWhitePrint}{RGB}{255,255,255}
+\definecolor{CambridgeBlackPrint}{RGB}{0,0,0}
+
+
+
 
