--- a/beamercolorthemecambridge.sty
+++ b/beamercolorthemecambridge.sty
@@ -5,6 +5,11 @@
   \definecolor{CambridgeLight}{named}{CambridgeLightBlue}
   \definecolor{CambridgeDark}{named}{CambridgeDarkBlue}
 }
+\def\beamer@theme@base@print{
+  \definecolor{CambridgeCore}{named}{CambridgeWhitePrint}
+  \definecolor{CambridgeLight}{named}{CambridgeBlackPrint}
+  \definecolor{CambridgeDark}{named}{CambridgeBlackPrint}
+}
 \def\beamer@theme@base@orange{
   \definecolor{CambridgeCore}{named}{CambridgeCoreOrange}
   \definecolor{CambridgeLight}{named}{CambridgeLightOrange}
@@ -32,7 +37,7 @@
 
 \mode<presentation>
 
-\setbeamercolor*{normal text}{fg=CambridgeDark,bg=white}
+\setbeamercolor*{normal text}{fg=CambridgeBlackPrint,bg=white}
 \setbeamercolor*{structure}{fg=CambridgeDark}
 
 \setbeamercolor*{palette primary}{fg=white,bg=CambridgeLight}
