Modified part: no blue background, red color title

--- a/beamercolorthemecambridge.sty
+++ b/beamercolorthemecambridge.sty
@@ -53,10 +53,10 @@
 
 \setbeamercolor*{lower separation line head}{fg=white,bg=CambridgeLight!80!black}
 
-\setbeamercolor*{special page canvas}{bg=CambridgeLight}
+\setbeamercolor*{special page canvas}{bg=CambridgeWhitePrint}
 \setbeamercolor*{special page separator upper}{bg=CambridgeLight!40!white}
 \setbeamercolor*{special page separator lower}{bg=CambridgeLight!40!black}
-\setbeamercolor*{special page title}{fg=white,bg=CambridgeLight!80!white}
+\setbeamercolor*{special page title}{fg=CambridgeYellow,bg=CambridgeLight!80!white}
 
 \setbeamercolor*{block body}{bg=CambridgeCore!20!normal text.bg,fg=CambridgeDark}
 \setbeamercolor*{block title}{bg=CambridgeDark,fg=white}
