--- a/cambridgecolours.sty
+++ b/cambridgecolours.sty
@@ -23,6 +23,8 @@
 \definecolor{CambridgeWhitePrint}{RGB}{255,255,255}
 \definecolor{CambridgeBlackPrint}{RGB}{0,0,0}
 
+\definecolor{CambridgeYellow}{RGB}{220,20,6}
+
 
 
 
