Fixed colors in part separator

--- a/beamercolorthemecambridge.sty
+++ b/beamercolorthemecambridge.sty
@@ -56,7 +56,7 @@
 \setbeamercolor*{special page canvas}{bg=CambridgeWhitePrint}
 \setbeamercolor*{special page separator upper}{bg=CambridgeLight!40!white}
 \setbeamercolor*{special page separator lower}{bg=CambridgeLight!40!black}
-\setbeamercolor*{special page title}{fg=CambridgeYellow,bg=CambridgeLight!80!white}
+\setbeamercolor*{special page title}{fg=CambridgeWhitePrint,bg=CambridgeDark!80!white}
 
 \setbeamercolor*{block body}{bg=CambridgeCore!20!normal text.bg,fg=CambridgeDark}
 \setbeamercolor*{block title}{bg=CambridgeDark,fg=white}
