--- a/beamerinnerthemecambridge.sty
+++ b/beamerinnerthemecambridge.sty
@@ -21,7 +21,7 @@
 \setbeamerfont{special page frame number}{size=\tiny}
 
 \setbeamerfont{date}{size=\tiny,series=\bfseries}
-\setbeamerfont{part title}{size=\LARGE}
+\setbeamerfont{part title}{size=\LARGE\bf}
 \setbeamerfont{part name}{size=\LARGE}
 \setbeamerfont{abstract title}{size=\LARGE}
 
